--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ DEEPSEEK_MODEL=deepseek-chat
 TELEGRAM_PARSE_INTERVAL=10
 WEB_PARSE_INTERVAL=30
 
+# === Tavily (web search) ===
+# Get from https://tavily.com
+TAVILY_API_KEY=your_tavily_api_key_here
+
 # === Alerts ===
 SIMILARITY_THRESHOLD=0.82
 REACTIONS_MULTIPLIER=3.0
