--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ apscheduler==3.10.4
 bcrypt==4.2.1
 # Config
 pydantic-settings==2.7.1
+# Web search
+tavily-python==0.5.0
 # Misc
 python-dotenv==1.0.1
 pytz==2024.2
