--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ POSTGRES_USER=tg_parser
 POSTGRES_PASSWORD=tg_parser_secret
 POSTGRES_DB=tg_parser_db
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=13001
 
 # === DeepSeek LLM ===
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
@@ -22,11 +22,22 @@ DEEPSEEK_MODEL=deepseek-chat
 # === Parsing intervals (minutes) ===
 TELEGRAM_PARSE_INTERVAL=10
 WEB_PARSE_INTERVAL=30
+API_SOURCE_MAX_ITEMS=20
+API_SOURCE_LOOKBACK_HOURS=48
 
 # === Tavily (web search) ===
 # Get from https://tavily.com
 TAVILY_API_KEY=your_tavily_api_key_here
 
+# === Source Discovery APIs ===
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+REDDIT_USER_AGENT=telegram-ai-parser/1.0
+GITHUB_API_KEY=
+PRODUCTHUNT_API_KEY=
+
 # === Alerts ===
 SIMILARITY_THRESHOLD=0.82
 REACTIONS_MULTIPLIER=3.0
+CLUSTER_MIN_MENTIONS=2
+COREAI_ALERT_THRESHOLD=0.6
