--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,13 @@ SIMILARITY_THRESHOLD=0.82
 REACTIONS_MULTIPLIER=3.0
 CLUSTER_MIN_MENTIONS=2
 COREAI_ALERT_THRESHOLD=0.6
+TREND_ALERTS_PER_CYCLE=2
+RESEARCH_ALERTS_PER_CYCLE=1
+MIN_PRODUCT_SCORE_FOR_ALERT=0.55
+MIN_NON_PRODUCT_CORE_SCORE_FOR_ALERT=0.72
+IMPORTANT_ALERT_CORE_SCORE=0.88
+IMPORTANT_ALERT_PRODUCT_SCORE=0.75
+IMPORTANT_ALERTS_PER_CYCLE=3
+DIGEST_TARGET_ITEMS=10
+DIGEST_PRODUCT_SHARE=0.75
+DIGEST_MAX_NON_PRODUCT=3
