--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,8 @@ MIN_NON_PRODUCT_CORE_SCORE_FOR_ALERT=0.72
 IMPORTANT_ALERT_CORE_SCORE=0.88
 IMPORTANT_ALERT_PRODUCT_SCORE=0.75
 IMPORTANT_ALERTS_PER_CYCLE=3
+BUSINESS_IMPACT_HIGH_THRESHOLD=0.78
+BUSINESS_IMPACT_MAX_SOURCES=5
 DIGEST_TARGET_ITEMS=10
 DIGEST_PRODUCT_SHARE=0.75
 DIGEST_MAX_NON_PRODUCT=3
