--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,4 @@ BUSINESS_IMPACT_MAX_SOURCES=5
 DIGEST_TARGET_ITEMS=10
 DIGEST_PRODUCT_SHARE=0.75
 DIGEST_MAX_NON_PRODUCT=3
+USER_PROMPT_MIN_SCORE=0.45
